--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "bulma": "^0.6.2",
         "bulma-extensions": "^0.7.5",
         "cross-env": "^5.1",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "vue": "^2.5.7"
-    }
+    },
+    "dependencies": {}
 }
