--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
+    "/js/form.js": "/js/form.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/form.js": "/js/form.js"
+    "/css/app.css": "/css/app.css"
 }
