--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
         "bootstrap": "^4.0.0",
         "bulma": "^0.6.2",
         "bulma-extensions": "^0.7.5",
-        "cross-env": "^5.1",
+        "cross-env": "^5.1.4",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^2.1.11",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "popper.js": "^1.14.1",
+        "vue": "^2.5.16"
     },
-    "dependencies": {}
+    "dependencies": {
+        "vue-template-compiler": "^2.5.16"
+    }
 }
