--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/form.js": "/js/form.js",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/form.js": "/js/form.js?id=1f5eb1bc92873a1bf6c7",
+    "/js/app.js": "/js/app.js?id=feca393e43416554c761",
+    "/css/app.css": "/css/app.css?id=659dca10130601d3dc4b"
 }
