--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "~4.0",
         "laracasts/utilities": "^3.0",
         "laravel-frontend-presets/bulma": "^1.7",
