--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel-frontend-presets/bulma": "^1.7",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.0",
         "yajra/laravel-datatables-oracle": "^8.4"
     },
     "require-dev": {
