--- a/composer.json
+++ b/composer.json
@@ -5,22 +5,23 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
+        "php": "*",
         "doctrine/dbal": "^2.7",
-        "fideloper/proxy": "~4.0",
-        "laracasts/utilities": "^3.0",
-        "laravel-frontend-presets/bulma": "^1.7",
-        "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0",
+        "fideloper/proxy": "*",
+        "laracasts/utilities": "*",
+        "laravel-frontend-presets/bulma": "*",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.1",
+        "laravel/tinker": "*",
         "maatwebsite/excel": "^3.0",
-        "yajra/laravel-datatables-oracle": "^8.4"
+        "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "nunomaduro/collision": "~2.0",
-        "phpunit/phpunit": "~7.0",
+        "filp/whoops": "*",
+        "fzaninotto/faker": "*",
+        "mockery/mockery": "*",
+        "nunomaduro/collision": "*",
+        "phpunit/phpunit": "*",
         "symfony/thanks": "^1.0"
     },
     "autoload": {
