--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "devDependencies": {
         "axios": "^0.18.0",
         "bootstrap": "^4.1.3",
-        "bulma": "^0.6.2",
-        "bulma-extensions": "^0.7.5",
-        "cross-env": "^5.2.0",
+        "bulma": "^0.7.1",
+        "bulma-extensions": "^2.2.2",
+        "cross-env": "^5.1.0",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2",
-        "laravel-mix": "^2.1.14",
+        "laravel-mix": "^4.0.15",
         "lodash": "^4.17.11",
         "popper.js": "^1.14.4",
-        "vue": "^2.5.17"
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.23.7",
+        "sass-loader": "^7.3.1",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-template-compiler": "^2.5.17"
+        "babel-polyfill": "^6.26.0",
+        "es6-object-assign": "^1.1.0",
+        "es6-promise": "^4.2.8",
+        "vue": "^2.6.10"
     }
 }
