--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/form.js": "/js/form.js?id=d005f94d7f5934a1425d",
-    "/js/app.js": "/js/app.js?id=34aa750d536ba4266535",
-    "/css/app.css": "/css/app.css?id=a0cb1546cf3542e9fc29"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/form.js": "/js/form.js"
 }
