--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/form.js": "/js/form.js"
+    "/js/app.js": "/js/app.js?id=499b09905bdc3f58e7aa",
+    "/css/app.css": "/css/app.css?id=1ca6411c40da8190f918",
+    "/js/form.js": "/js/form.js?id=f2ccb6e828f925bbb78a"
 }
