--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-polyfill": "^6.26.0",
         "es6-object-assign": "^1.1.0",
         "es6-promise": "^4.2.8",
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "whatwg-fetch": "^3.0.0"
     }
 }
